--- a/m2/vrf_getter.yml
+++ b/m2/vrf_getter.yml
@@ -7,9 +7,9 @@
   tasks:
           - name: "TASK 1: Get IP interface brief" #VRF config from routers"
             ios_command:
-                    # commands: "show running-config | section vrf definition"
+                    commands: "show running-config | section vrf definition"
                     #Since I don't have any VRF configurations on my devices, I will just show the interface ips."
-                    commands: "show ip interface brief"
+                    #commands: "show ip interface brief"
             register: cli_result
 
           - name: "TASK 2: Print IP interface output" #VRF output"
